1999-01-13  David Faure  <faure@kde.org>

	* kfmman.cpp (openURL): special case for the cache directory :
	save contents of the cache to index.html before opening the URL.

	* kfmgui.cpp (slotClearCache): notify windows showing the cache.

	* kfmexec.*: Let the job finish, don't stop it after the first dir
 	returned. This fixes lots of problems, including opening ftp locations 
	twice from minicli (this used to sigsegv), only one directory 
	displayed instead of all of them, ...
	
	* *: replaced .data() with .copy() after localkdedir, before +=.

1999-01-11  David Faure  <faure@kde.org>

	* kioslave/ftp.cpp: Follow links on ftp site. Fix found by 
	Sven Fischer <herpes@kawo2.rwth-aachen.de> (kb1551).
	I also removed calls to ksprintf (less secure than +=).

	* kioslave/file.cpp (OpenDir): Added a cache to reduce calls to 
	getpwuid and getgrgid. Improves speed, esp for NIS users (kb1536).
	Initial patch from Philipp Hullmann <hullmann@nano.uni-hannover.de>.

	* kbind.cpp: Store and use terminal settings (set in applnks) in
	KMimeBind.
	* kbind.h: Made findType private and called getMagicMimeType
	instead. Fixes the text in the status bar, and the hint for root icons.

1999-01-07  David Faure  <faure@kde.org>

	* kioslave/file.cpp (OpenDir): Added redirection if HTML View set and
 	opening index.html or .kde.html

1999-01-06  David Faure  <faure@kde.org>

	* kfmprops.*: Commented out the "Working Directory" line edit. It
	isn't used at all. Thanks to the old kb1297.

	* kioslave/ftp_proxy.cpp: Lots of fixes.

1999-01-04  David Faure  <faure@kde.org>

	* kfmgui.cpp: Fixed Tree View being initialized even if not shown.
	This speeds up A LOT navigation in kfm !
	
	* kfmserver.cpp: Applied patch from Andreas Pour for better magic
	file creation. (Removes annoying dialog box at startup).

	* kioslave/tar.cpp: Fixed tar protocol support. Uses sscanf
	instead of strtok. Should work with GNU tar and non-GNU tar, which 
	have a different date format.
	